NIFI-12545 Update components in iceberg bundle using current API methods